--- a/project.json
+++ b/project.json
@@ -1,23 +1,34 @@
 {
-  "name": "enerdapp1",
+  "name": "bob",
   "$schema": "node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
-  "prefix": "enerdapp1",
+  "prefix": "bob",
   "sourceRoot": "./src",
   "tags": [],
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:application",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
-        "outputPath": "dist/enerdapp1",
+        "outputPath": "dist/bob",
         "index": "./src/index.html",
         "browser": "./src/main.ts",
-        "polyfills": ["zone.js"],
+        "polyfills": [
+          "zone.js",
+          "./src/polyfills.ts"
+        ],
         "tsConfig": "./tsconfig.app.json",
         "inlineStyleLanguage": "scss",
-        "assets": ["./src/favicon.ico", "./src/assets"],
-        "styles": ["./src/styles.scss"],
+        "assets": [
+          "./src/favicon.ico",
+          "./src/assets"
+        ],
+        "styles": [
+          "@angular/material/prebuilt-themes/purple-green.css",
+          "./src/styles.scss"
+        ],
         "scripts": []
       },
       "configurations": {
@@ -48,10 +59,10 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
-          "buildTarget": "enerdapp1:build:production"
+          "buildTarget": "bob:build:production"
         },
         "development": {
-          "buildTarget": "enerdapp1:build:development"
+          "buildTarget": "bob:build:development"
         }
       },
       "defaultConfiguration": "development"
@@ -59,7 +70,7 @@
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "buildTarget": "enerdapp1:build"
+        "buildTarget": "bob:build"
       }
     }
   }
